[2022-06-16 김민정] thymeleaf 엔진 테스트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # JPA \uCC98\uB9AC \uC2DC\uC5D0 \uBC1C\uC0DD\uD558\uB294 SQL\uC744 \uBCF4\uC5EC\uC904 \uAC83\uC778\uC9C0\uB97C \uACB0\uC815
 spring.jpa.show-sql=true
 
+# \uACB0\uACFC\uB97C \uCE90\uC2F1\uD558\uC9C0 \uC54A\uB3C4\uB85D \uC124\uC815
 spring.thymeleaf.cache=false
 
 spring.servlet.multipart.enabled=true
