[2022-06-18 김민정] auto reload 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,12 @@ spring.jpa.show-sql=true
 # \uACB0\uACFC\uB97C \uCE90\uC2F1\uD558\uC9C0 \uC54A\uB3C4\uB85D \uC124\uC815
 spring.thymeleaf.cache=false
 
+# jsp, css \uBCC0\uACBD \uC2DC \uC0C8\uB85C\uACE0\uCE68 \uC5C6\uC774 \uBC14\uB85C \uC801\uC6A9 > \uAE30\uBCF8\uAC12 true
+spring.devtools.livereload.enabled=true
+
+# \uD504\uB9AC\uB9C8\uCEE4 \uD15C\uD50C\uB9BF \uC5D4\uC9C4 \uC774\uC6A9 \uC2DC
+# spring.freemarker.cache=false
+
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=C:\\upload
 spring.servlet.multipart.max-request-size=30MB
