--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,17 @@ spring.devtools.livereload.enabled=true
 # \uD504\uB9AC\uB9C8\uCEE4 \uD15C\uD50C\uB9BF \uC5D4\uC9C4 \uC774\uC6A9 \uC2DC
 # spring.freemarker.cache=false
 
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.location=C:\\upload
+# \uD30C\uC77C \uC5C5\uB85C\uB4DC \uAC00\uB2A5 \uC5EC\uBD80 \uC120\uD0DD
+spring.servlet.multipart.enabled=true  
+# \uC5C5\uB85C\uB4DC\uB41C \uD30C\uC77C\uC758 \uC784\uC2DC \uC800\uC7A5 \uACBD\uB85C
+spring.servlet.multipart.location=C:\\upload 
+# \uD55C\uBC88\uC5D0 \uCD5C\uB300 \uC5C5\uB85C\uB4DC \uAC00\uB2A5 \uC6A9\uB7C9
 spring.servlet.multipart.max-request-size=30MB
+# \uD30C\uC77C \uD558\uB098\uC758 \uCD5C\uB300 \uD06C\uAE30
 spring.servlet.multipart.max-file-size=10MB
+# \uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
+org.oneday.upload.path=C:\\upload  
+
 
 logging.level.org.springframework.security.web=debug
 logging.level.com.oneday.security=debug
