--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 	implementation 'com.querydsl:querydsl-jpa'
 	//querydsl 추가
 	implementation 'com.querydsl:querydsl-apt'
+
+	// https://mvnrepository.com/artifact/net.coobird/thumbnailator > 썸네일
+	implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.17'
 }
 
 tasks.named('test') {
