--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,6 @@ spring.servlet.multipart.max-file-size=10MB
 # \uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
 org.oneday.upload.path=C:\\upload
 
-
+# \uB85C\uADF8 \uB808\uBCA8 \uC0C1\uC138 \uAE30\uB85D
 logging.level.org.springframework.security.web=debug
 logging.level.com.oneday.security=debug
