--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,9 @@ dependencies {
 
 	// O Auth2 Google Social 로그인 관련
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
 }
 
 tasks.named('test') {
