[2022-09-28 김민정] 로그인 JWT 추가

--- a/build.gradle
+++ b/build.gradle
@@ -64,9 +64,12 @@ dependencies {
 
 	// O Auth2 Google Social 로그인 관련
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
-	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
-	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+
+
+
 }
 
 tasks.named('test') {
