[2024-05-23 김민정] commit test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,39 @@
+server.port=8081
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/bootex
-spring.datasource.username=bootuser
-spring.datasource.password=bootuser
+spring.datasource.username=bootex
+spring.datasource.password=Abcd123@
 
-# \uD504\uB85C\uC81D\uD2B8 \uC2E4\uD589 \uC2DC \uC790\uB3D9\uC73C\uB85C DDL\uC744 \uC0DD\uC131\uD560 \uAC83\uC778\uC9C0\uB97C \uACB0\uC815\uD558\uB294 \uC124\uC815
+# 프로젝트 실행 시 자동으로 DDL을 생성할 것인지를 결정하는 설정
 spring.jpa.hibernate.ddl-auto=update
-# SQL\uC744 \uD3EC\uB9F7\uD551\uD574\uC11C \uCD9C\uB825\uD574\uC90C
+# SQL을 포맷핑해서 출력해줌
 spring.jpa.properties.hibernate.format_sql=true
-# JPA \uCC98\uB9AC \uC2DC\uC5D0 \uBC1C\uC0DD\uD558\uB294 SQL\uC744 \uBCF4\uC5EC\uC904 \uAC83\uC778\uC9C0\uB97C \uACB0\uC815
+# JPA 처리 시에 발생하는 SQL을 보여줄 것인지를 결정
 spring.jpa.show-sql=true
 
-# \uACB0\uACFC\uB97C \uCE90\uC2F1\uD558\uC9C0 \uC54A\uB3C4\uB85D \uC124\uC815
+# 결과를 캐싱하지 않도록 설정
 spring.thymeleaf.cache=false
 
-# jsp, css \uBCC0\uACBD \uC2DC \uC0C8\uB85C\uACE0\uCE68 \uC5C6\uC774 \uBC14\uB85C \uC801\uC6A9 > \uAE30\uBCF8\uAC12 true
+# jsp, css 변경 시 새로고침 없이 바로 적용 > 기본값 true
 spring.devtools.livereload.enabled=true
 
-# \uD504\uB9AC\uB9C8\uCEE4 \uD15C\uD50C\uB9BF \uC5D4\uC9C4 \uC774\uC6A9 \uC2DC
+# 프리마커 템플릿 엔진 이용 시
 # spring.freemarker.cache=false
 
-# \uD30C\uC77C \uC5C5\uB85C\uB4DC \uAC00\uB2A5 \uC5EC\uBD80 \uC120\uD0DD
+# 파일 업로드 가능 여부 선택
 spring.servlet.multipart.enabled=true  
-# \uC5C5\uB85C\uB4DC\uB41C \uD30C\uC77C\uC758 \uC784\uC2DC \uC800\uC7A5 \uACBD\uB85C
+# 업로드된 파일의 임시 저장 경로
 spring.servlet.multipart.location=C:\\upload 
-# \uD55C\uBC88\uC5D0 \uCD5C\uB300 \uC5C5\uB85C\uB4DC \uAC00\uB2A5 \uC6A9\uB7C9
+# 한번에 최대 업로드 가능 용량
 spring.servlet.multipart.max-request-size=30MB
-# \uD30C\uC77C \uD558\uB098\uC758 \uCD5C\uB300 \uD06C\uAE30
+# 파일 하나의 최대 크기
 spring.servlet.multipart.max-file-size=10MB
-# \uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
+# 파일 저장 경로
 org.oneday.upload.path=C:\\upload
 
-# \uB85C\uADF8 \uB808\uBCA8 \uC0C1\uC138 \uAE30\uB85D
+# 로그 레벨 상세 기록
 logging.level.org.springframework.security.web=debug
 logging.level.com.oneday.security=debug
 
-# oauth \uB3D9\uC791\uD558\uB3C4\uB85D \uC124\uC815
+# oauth 동작하도록 설정
 spring.profiles.include=oauth
