[2024-05-23 김민정] swagger 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,6 @@ logging.level.com.oneday.security=debug
 
 # oauth 동작하도록 설정
 spring.profiles.include=oauth
+
+# swagger.. boot 2.6 이후부터 기본값이 path_pattern_parser로 변경되어 명시
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
